--- a/SalesWebMvc/SalesWebMvc.csproj
+++ b/SalesWebMvc/SalesWebMvc.csproj
@@ -15,4 +15,8 @@
     <Content Remove="Views\Home\Index1.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.14" />
+  </ItemGroup>
+
 </Project>
