--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvc.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "server=localhost;userid=Gleder;password=58246274;database=saleswebmvcappdb"
   }
 }
